--- a/scss/origen.scss
+++ b/scss/origen.scss
@@ -9,6 +9,7 @@ $color-principal2:#dc2f02;
     border: none;
     outline: none;
     font-family: 'Kumbh Sans', sans-serif;
+    font-size: 1.3rem;
 }
 
 a {
@@ -23,21 +24,24 @@ body {
     padding-top: 30px;
 }
 
+.header {
+    background: url(../img/header.jpg) no-repeat center;
+    background-size: cover;
+    min-height: 100vh;
+    padding-left: 50vh;
+}
+
+.header .navbar {
+    background-color: transparent !important;
+}
+
 .navbar-light .navbar-nav .nav-link {
-    color: $color-principal;
-    padding: 0px 20px;
-    font-size: 1.3rem;
+    color: $color-principal!important;
+    font-weight: 700;
 }
 
-.navbar-light .navbar-nav .nav-link:hover {
-    color: $color-principal2;
-}
-
-.imagenMenu {
-    height: 100vh;
-    width: 100%;
-    text-align: center;
-    position: relative;
+.navbar-light .navbar-toggler-icon {
+    color: white!important;
 }
 
 .fondo {
@@ -70,13 +74,14 @@ body {
 }
 
 .contenedorIconos {
+    margin-top: -50px;
     width: 100%;
     display: flex;
     justify-content: flex-end;
 }
 
 .iconosContenido {
-    margin-top: 0px;
+    margin-top: -80px;
     margin-right: 50px;
 }
 
@@ -104,8 +109,7 @@ body {
     color: white;
     text-align: left;
     font-size: 3rem;
-    margin-left: 50%;
-    margin-top: 20%;
+    margin: 30vh 0vh 0vh 30vh;
     text-shadow: 2px 2px 2px black;
 }
 
@@ -114,21 +118,21 @@ body {
     font-weight: 700;
     padding: 20px 150px;
     text-align: center;
-    margin-left: 30%;
-    margin-top: 30%;
+    margin: 50vh 0vh 0vh 30vh;
     background-image: linear-gradient( 60deg, #e85d04, #dc2f02);
     border-radius: 33px 0px 33px 0px;
 }
 
-.botonPrimario :hover {
+.botonPrimario:hover {
     color: white;
+    background-image: linear-gradient( 80deg, #e85d04, #dc2f02);
 }
 
 .botonPrimario a {
     color: white;
 }
 
-.botonPrimario :hover {
+.botonPrimario:hover {
     color: black;
 }
 
@@ -211,7 +215,32 @@ body {
     .fondo {
         display: none;
     }
-    .principal {
-        display: none;
+    .header {
+        background: url(../img/header.jpg) no-repeat center;
+        background-size: cover;
+        min-height: 100vh;
+        padding-left: 0vh;
+    }
+    .iconosContenido {
+        margin-top: -20px;
+        margin-right: 0px;
+    }
+    .textoPrincipal {
+        font-weight: 700;
+        position: absolute;
+        color: white;
+        font-size: 1.3rem;
+        text-align: center;
+        margin: 15vh 0vh 0vh 0vh;
+        text-shadow: 2px 2px 2px black;
+    }
+    .botonPrimario {
+        color: white;
+        font-weight: 700;
+        padding: 20px 40px;
+        text-align: center;
+        margin: 25vh 0vh 0vh 00vh;
+        background-image: linear-gradient( 60deg, #e85d04, #dc2f02);
+        border-radius: 33px 0px 33px 0px;
     }
 }
