--- a/scss/origen.scss
+++ b/scss/origen.scss
@@ -328,3 +328,29 @@ body {
         padding-left: 0vh;
     }
 }
+
+
+/* FORMULARIO DE INSCRIPCION */
+
+.dato {
+    border-bottom: 1px solid $color-principal;
+    background: none;
+    padding: 0 100px 0 0;
+    color: gray;
+}
+
+.formularioInscripcion {
+    display: flex;
+    justify-content: center;
+}
+
+.inputDato {
+    color: $color-principal;
+    font-weight: 700;
+    text-align: right;
+    padding-right: 20px;
+}
+
+.inputDato__email {
+    padding-right: 50px;
+}
