--- a/scss/origen.scss
+++ b/scss/origen.scss
@@ -354,3 +354,21 @@ body {
 .inputDato__email {
     padding-right: 50px;
 }
+
+@media (max-width: 600px) {
+    .inputDato {
+        color: $color-principal;
+        font-weight: 700;
+        text-align: right;
+        padding-right: 0px;
+    }
+    .inputDato__email {
+        padding-right: 0px;
+    }
+    .dato {
+        border-bottom: 1px solid $color-principal;
+        background: none;
+        padding: 0 0px 0 0;
+        color: gray;
+    }
+}
